--- a/authentication/pom.xml
+++ b/authentication/pom.xml
@@ -3,21 +3,13 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
+    <parent>
+        <groupId>com.dmx</groupId>
+        <artifactId>java-ddd-manager-projects-api-rest</artifactId>
+        <version>1.0-SNAPSHOT</version>
+    </parent>
 
-    <groupId>com.dmx</groupId>
-    <artifactId>java-ddd-manager-projects-api-rest</artifactId>
-    <version>1.0-SNAPSHOT</version>
-    <packaging>pom</packaging>
-    <modules>
-        <module>administrative</module>
-        <module>client</module>
-        <module>shared</module>
-        <module>app</module>
-        <module>development</module>
-        <module>view</module>
-        <module>media</module>
-        <module>authentication</module>
-    </modules>
+    <artifactId>authentication</artifactId>
 
     <properties>
         <maven.compiler.source>22</maven.compiler.source>
