ADD: entity <QueryHandlerInformation> in microservice <administrative>

--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,13 @@
         <module>microservice-development</module>
         <module>microservice-authentication</module>
     </modules>
+    <dependencies>
+        <dependency>
+            <groupId>org.reflections</groupId>
+            <artifactId>reflections</artifactId>
+            <version>0.10.2</version>
+        </dependency>
+    </dependencies>
 
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
