ADD: entity <HibernateConfigurationFactory> service: <Administrative-service>

--- a/microservice-media/pom.xml
+++ b/microservice-media/pom.xml
@@ -50,6 +50,12 @@
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.apache.tomcat/tomcat-dbcp -->
+		<dependency>
+			<groupId>org.apache.tomcat</groupId>
+			<artifactId>tomcat-dbcp</artifactId>
+			<version>10.1.15</version>
+		</dependency>
 
 		<dependency>
 			<groupId>org.postgresql</groupId>
