ADD: entity <HibernateConfigurationFactory>; service: <Development-service>

--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,11 @@
             <artifactId>javafaker</artifactId>
             <version>1.0.2</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.tomcat</groupId>
+            <artifactId>tomcat-dbcp</artifactId>
+            <version>10.1.15</version>
+        </dependency>
     </dependencies>
 
     <properties>
